@@ -7,6 +7,8 @@ dh-make-perl (0.69-1) UNRELEASED; urgency=low
   [ Ansgar Burchardt ]
   * Do not require --cpan in addition to --pkg-perl when adding Vcs-* fields.
   * Debian::Dependency: Recognize deprecated '<' and '>' relations.
+  * Debian::Dependency: Allow architecture restrictions in dependencies.
+    For now this information is just ignored.
 
  -- Damyan Ivanov <dmn@debian.org>  Wed, 05 May 2010 08:40:51 +0300
 
